--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,10 +83,11 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
             android:text="Sign Up"
+            android:background="@drawable/button_background"
             android:textColor="@color/white"
             android:textSize="21sp" />
     </LinearLayout>
