--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="@color/white"/>
     <corners android:radius="100dp"/>
-
-
+    <stroke android:width="1dp" android:color="#1F1C27" />
 </shape>
