--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
 
@@ -42,7 +42,7 @@
             android:hint="User Name"
             android:inputType="textPersonName"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/hint_color"
             android:textSize="21sp" />
 
@@ -58,7 +58,7 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/hint_color"
             android:textSize="21sp" />
 
@@ -68,7 +68,7 @@
             android:layout_marginBottom="30dp"
             android:gravity="right"
             android:text="Forgot password ?"
-            android:textColor="@color/white" />
+            android:textColor="@color/colorPrimary" />
 
         <Button
             android:id="@+id/login"
@@ -86,9 +86,9 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="30dp"
+            android:background="@drawable/button_background"
             android:gravity="center"
             android:text="Sign Up"
-            android:background="@drawable/button_background"
             android:textColor="@color/white"
             android:textSize="21sp" />
     </LinearLayout>
