--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -89,14 +89,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
         android:layout_marginTop="20sp"
-        android:layout_marginStart="20sp"
+        android:layout_marginStart="15sp"
         android:background="@drawable/button_background"
         android:text="Log in"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="21sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="452dp" />
+         />
 
     <Button
         android:id="@+id/signUp"
@@ -105,14 +104,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/login"
         app:layout_constraintTop_toTopOf="@id/login"
-        android:layout_marginStart="5sp"
-        android:layout_marginEnd="20sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginEnd="15sp"
         android:background="@drawable/button_background"
         android:gravity="center"
         android:text="Sign Up"
         android:textColor="@color/white"
-        android:textSize="21sp"
-        tools:layout_editor_absoluteX="208dp"
-        tools:layout_editor_absoluteY="452dp" />
+        android:textSize="21sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
